--- a/Cardinal/App.config
+++ b/Cardinal/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <connectionStrings>
+    <add name="CardinalConnection" connectionString="Server=(localdb)\\mssqllocaldb;Database=cardinal-db;Trusted_Connection=True;MultipleActiveResultSets=true" />
+  </connectionStrings>
+  <startup> 
+      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
 </configuration>
