--- a/Cardinal.Service/Cardinal.Service.csproj
+++ b/Cardinal.Service/Cardinal.Service.csproj
@@ -48,7 +48,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountService.cs" />
+    <Compile Include="CardService.cs" />
     <Compile Include="IAccountService.cs" />
+    <Compile Include="ICardService.cs" />
     <Compile Include="UserService.cs" />
     <Compile Include="IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
