--- a/Cardinal/Cardinal.csproj
+++ b/Cardinal/Cardinal.csproj
@@ -76,6 +76,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountCuttings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AccountCuttings.Designer.cs">
+      <DependentUpon>AccountCuttings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Cards.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transactions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Transactions.Designer.cs">
+      <DependentUpon>Transactions.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserAccounts.cs">
       <SubType>Form</SubType>
     </Compile>
