--- a/Cardinal.Model/App.config
+++ b/Cardinal.Model/App.config
@@ -1,12 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="Cardinal.Model.Properties.Settings.CardinalDbContextConnectionString"
-      connectionString="Server=(localdb)\mssqllocaldb;Database=cardinal-db;Trusted_Connection=True;MultipleActiveResultSets=true" />
+    <add name="Cardinal.Model.Properties.Settings.CardinalDbContextConnectionString" connectionString="Server=(localdb)\mssqllocaldb;Database=cardinal-db;Trusted_Connection=True;MultipleActiveResultSets=true" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
