--- a/Cardinal.Service/Cardinal.Service.csproj
+++ b/Cardinal.Service/Cardinal.Service.csproj
@@ -51,6 +51,8 @@
     <Compile Include="CardService.cs" />
     <Compile Include="IAccountService.cs" />
     <Compile Include="ICardService.cs" />
+    <Compile Include="ITransactionService.cs" />
+    <Compile Include="TransactionService.cs" />
     <Compile Include="UserService.cs" />
     <Compile Include="IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
