--- a/Cardinal/App.config
+++ b/Cardinal/App.config
@@ -3,7 +3,7 @@
   <configSections>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="CardinalConnection" connectionString="Server=(localdb)\\mssqllocaldb;Database=cardinal-db;Trusted_Connection=True;MultipleActiveResultSets=true" />
   </connectionStrings>
