Working on User Seeder

--- a/Cardinal.Tasks/packages.config
+++ b/Cardinal.Tasks/packages.config
@@ -1,9 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Faker.Net" version="1.0.3" targetFramework="net461" />
   <package id="Microsoft.ML" version="0.4.0" targetFramework="net461" />
   <package id="Microsoft.ML.CpuMath" version="0.4.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
-  <package id="System.CodeDom" version="4.4.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="System.CodeDom" version="4.5.0" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Dataflow" version="4.8.0" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net461" />
+  <package id="Unity" version="5.8.7" targetFramework="net461" />
 </packages>
