--- a/Cardinal.Model/App.config
+++ b/Cardinal.Model/App.config
@@ -5,7 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="Cardinal.Model.Properties.Settings.CardinalDbContextConnectionString" connectionString="Server=(localdb)\mssqllocaldb;Database=cardinal-db;Trusted_Connection=True;MultipleActiveResultSets=true" />
+    <add name="Cardinal.Model.Properties.Settings.CardinalDbContextConnectionString"
+      connectionString="Server=localhost\SQLEXPRESS;Database=cardinal-db;Trusted_Connection=True;MultipleActiveResultSets=true" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
