--- a/Cardinal.Model/App.config
+++ b/Cardinal.Model/App.config
@@ -6,7 +6,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="Cardinal.Model.Properties.Settings.CardinalDbContextConnectionString"
-      connectionString="Server=localhost\SQLEXPRESS;Database=cardinal-db;Trusted_Connection=True;MultipleActiveResultSets=true" />
+      connectionString="Server=(localdb)\mssqllocaldb;Database=cardinal-db;Trusted_Connection=True;MultipleActiveResultSets=true" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
