--- a/Cardinal.Tasks/Cardinal.Tasks.csproj
+++ b/Cardinal.Tasks/Cardinal.Tasks.csproj
@@ -150,6 +150,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AI\AccountClassificator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seeder\UserSeeder.cs" />
@@ -158,9 +159,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="AI\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Cardinal.Model\Cardinal.Model.csproj">
       <Project>{a01c17a2-24aa-47f5-b50a-88d6ea3da24f}</Project>
