--- a/Cardinal/packages.config
+++ b/Cardinal/packages.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
-  <package id="Unity" version="5.8.6" targetFramework="net461" />
+  <package id="Microsoft.ML" version="0.4.0" targetFramework="net461" />
+  <package id="Microsoft.ML.CpuMath" version="0.4.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="System.CodeDom" version="4.5.0" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net461" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net461" />
+  <package id="Unity" version="5.8.8" targetFramework="net461" />
 </packages>
